--- a/src/navigation.scss
+++ b/src/navigation.scss
@@ -15,12 +15,12 @@ nav {
     }
 
     .nav-right {
-        margin-right: 5vw;
+        margin-right: $container_margin;
         margin-left: auto;
     }
 
     .nav-left {
-        margin-left: 5vw;
+        margin-left: $container_margin;
         margin-right: auto;
     }
 
