--- a/src/navigation.scss
+++ b/src/navigation.scss
@@ -1,6 +1,6 @@
 nav {
     width: 100%;
-    height: 120px;
+    height: $navbar_height;
     display: flex;
     align-items: center;
     justify-content: space-between;
