--- a/src/base.scss
+++ b/src/base.scss
@@ -17,6 +17,7 @@ body {
 main {
     flex: 1 1 auto;
     display: flex;
+    flex-direction: column;
     
     overflow-x: hidden;
     scroll-behavior: smooth;
