--- a/src/base.scss
+++ b/src/base.scss
@@ -1,17 +1,20 @@
+@use 'colours';
+@use 'variables';
+
 body, html {
     box-sizing: border-box;
     scroll-behavior: smooth;
     padding: 0;
     margin: 0;
     height: 100vh;
-    background-color: $light;
+    background-color: colours.$light;
 }
 
 body {
     overflow: hidden;
     display: flex;
     flex-direction: column;
-    border: 1vh solid $primary;
+    border: 1vh solid colours.$primary;
 }
 
 main {
@@ -23,10 +26,10 @@ main {
     scroll-behavior: smooth;
 
     &.with-nav {
-        height: calc(100% - $navbar_height - 2vh);
+        height: calc(100% - variables.$navbar_height - 2vh);
         width: calc(100% - 2vh);
         position: absolute;
-        top: calc($navbar_height + 1vh);
+        top: calc(variables.$navbar_height + 1vh);
         left: 1vh;
     }
 
