--- a/src/navigation.scss
+++ b/src/navigation.scss
@@ -1,6 +1,9 @@
+@use 'colours';
+@use 'variables';
+
 nav {
     width: 100%;
-    height: $navbar_height;
+    height: variables.$navbar_height;
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -15,12 +18,12 @@ nav {
     }
 
     .nav-right {
-        margin-right: $container_margin;
+        margin-right: variables.$container_margin;
         margin-left: auto;
     }
 
     .nav-left {
-        margin-left: $container_margin;
+        margin-left: variables.$container_margin;
         margin-right: auto;
     }
 
@@ -29,7 +32,7 @@ nav {
 
         i {
             font-size: 40px;
-            color: $primary;
+            color: colours.$primary;
         }
     }
 }
@@ -38,7 +41,7 @@ nav {
     font-size: 20px;
     text-align: center;
     text-decoration: none;
-    color: $primary;
+    color: colours.$primary;
     position: relative;
     display: inline-block;
     z-index: 100;
@@ -46,7 +49,7 @@ nav {
     padding: 5px;
 
     i {
-        color: $primary;
+        color: colours.$primary;
     }
 
     &:after {
@@ -65,7 +68,7 @@ nav {
 
     &:hover:after, &.active:after {
         height: 120%;
-        background-color: darken($light, 10%);
+        background-color: darken(colours.$light, 10%);
         opacity: 1;
     }
 }
@@ -80,11 +83,11 @@ nav {
         transition: all .2s;
         height: 100vh !important;
         width: 100vw !important;
-        background-color: $light;
+        background-color: colours.$light;
         margin: 0;
         display: block !important;
         padding-top: 40px;
-        border-top: 1vh solid $primary;
+        border-top: 1vh solid colours.$primary;
 
         .nav-item {
             padding: 20px;
