--- a/src/text.scss
+++ b/src/text.scss
@@ -1,5 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Outfit&family=Roboto&display=swap');
 
+@use 'colours';
+
 h1, h2, h3, h4, h5, h6 {
     font-family: 'Outfit', sans-serif;
     font-weight: 500;
@@ -8,16 +10,16 @@ h1, h2, h3, h4, h5, h6 {
 
 * {
     font-family: 'Roboto', sans-serif;
-    color: $dark;
+    color: colours.$dark;
     font-weight: 100;
 }
 
 strong {
-    color: $primary;
+    color: colours.$primary;
     font-weight: 400;
 }
 
-h1 { font-size: 56px; color: $primary; }
+h1 { font-size: 56px; color: colours.$primary; }
 h2 { font-size: 30px; }
 h3 { font-size: 24px; }
 h4 { font-size: 18px; }
@@ -25,7 +27,7 @@ h5 { font-size: 16px; }
 h6 { font-size: 14px; }
 
 @media screen and (max-width: 1000px) {
-    h1 { font-size: 42px; color: $primary; }
+    h1 { font-size: 42px; color: colours.$primary; }
     h2 { font-size: 24px; }
     h3 { font-size: 20px; }
     h4 { font-size: 18px; }
@@ -43,18 +45,18 @@ p, span {
 }
 
 .light, .light * {
-    color: $light !important;
+    color: colours.$light !important;
 }
 
 a:not([class]), a.no-line {
     text-decoration: none;
     white-space: nowrap;
-    color: $primary;
+    color: colours.$primary;
     position: relative;
     z-index: 0;
 
     &.with-icon i {
-        color: $primary;
+        color: colours.$primary;
     }
 
     &:after {
@@ -64,7 +66,7 @@ a:not([class]), a.no-line {
         position: absolute;
         left: 0;
         bottom: -12%;
-        background: $primary;
+        background: colours.$primary;
         transition: all .1s ease;
         transform-origin: bottom left;
         border-radius: 4px;
@@ -77,7 +79,7 @@ a:not([class]), a.no-line {
 
     &:hover:after {
         height: 128%;
-        background-color: darken($light, 10%);
+        background-color: darken(colours.$light, 10%);
     }
 }
 
@@ -94,7 +96,7 @@ li {
 
     i {
         font-size: 20px;
-        color: $primary;
+        color: colours.$primary;
         padding-right: 15px;
     }
 }
