--- a/src/pill.scss
+++ b/src/pill.scss
@@ -1,25 +1,27 @@
+@use 'colours';
+
 .pill {
-    background-color: darken($light, 5%);
+    background-color: darken(colours.$light, 5%);
     text-decoration: none;
     font-size: 18px;
-    color: $dark;
+    color: colours.$dark;
     padding: 10px;
     margin-right: 10px;
     margin-bottom: 10px;
     border-radius: 4px;
 
     &:hover {
-        background-color: darken($light, 10%);
+        background-color: darken(colours.$light, 10%);
     }
 
     &.active {
-        background-color: $dark;
-        color: $light;
+        background-color: colours.$dark;
+        color: colours.$light;
     }
 
     &.placeholder {
         display: inline-block;
-        background-color: darken($light, 10%);
+        background-color: darken(colours.$light, 10%);
         animation: pillPulse 1s infinite ease;
         width: 60px;
         height: 18px;
@@ -27,7 +29,7 @@
 
     &.pill-close {
         margin-left: 12px;
-        color: $light;
+        color: colours.$light;
         font-size: 14px;
     }
 }
@@ -45,7 +47,7 @@
 }
 
 @keyframes pillPulse {
-    0% { background-color: darken($light, 10%); }
-    50% { background-color: darken($light, 5%); }
-    100% { background-color: darken($light, 10%); }
+    0% { background-color: darken(colours.$light, 10%); }
+    50% { background-color: darken(colours.$light, 5%); }
+    100% { background-color: darken(colours.$light, 10%); }
 }
