--- a/src/card.scss
+++ b/src/card.scss
@@ -1,12 +1,12 @@
 @use 'colours';
 
 .card {
-    padding: 40px;
+    padding: 20px 40px;
     margin-right: 10px;
     margin-bottom: 10px;
     border-radius: 4px;
     background-color: darken(colours.$light, 5%);
-    display: flex;
+    display: inline-flex;
     align-items: center;
 
     &.placeholder {
