--- a/src/markdown.scss
+++ b/src/markdown.scss
@@ -1,9 +1,10 @@
 @use 'colours';
+@use 'fonts';
 
 blockquote {
     border-left: 5px solid colours.$primary;
     margin: 0;
-    padding: 10px 60px 10px 30px;
+    padding: 20px 25px;
     background-color: darken(colours.$light, 5%);
     display: inline-block;
     border-radius: 4px;
@@ -17,6 +18,12 @@ blockquote {
 code {
     padding: 0 3px;
     margin: 0;
+    font-family: monospace;
+    border-radius: 4px;
+    display: block;
+    background-color: darken(colours.$light, 5%);
+    padding: 20px 25px;
+    margin: 10px 0;
 
     * {
         font-family: monospace;
@@ -50,9 +57,26 @@ hr {
     img { padding-top: 20px; }
 }
 
-img + em {
-    font-size: 14px;
-    color: darken(colours.$light, 10%);
-    display: block;
-    padding-bottom: 20px;
+img {
+    & + span {
+        font-size: 18px;
+        font-style: italic;
+        display: block;
+        padding-left: 15px;
+        padding-top: 5px;
+        padding-bottom: 5px;
+        margin-bottom: 20px;
+
+        &:before {
+            content: '\f123';
+            font-family: 'akar-icons-btn';
+            color: colours.$primary;
+            font-style: normal;
+            font-size: 18px;
+            position: relative;
+            left: -10px;
+        }
+    }
+
+    border-radius: 4px;
 }
