--- a/src/navigation.scss
+++ b/src/navigation.scss
@@ -28,7 +28,7 @@ nav {
     }
 
     .nav-burger {
-        display: none !important;
+        display: none;
 
         i {
             font-size: 40px;
