--- a/src/card.scss
+++ b/src/card.scss
@@ -6,7 +6,7 @@
     margin-bottom: 10px;
     border-radius: 4px;
     background-color: darken(colours.$light, 5%);
-    display: inline-flex;
+    display: flex;
     align-items: center;
 
     &.placeholder {
@@ -64,6 +64,7 @@
             width: 100% !important;
             height: auto !important;
         }
+        margin-right: 0;
     }
 }
 
@@ -77,5 +78,5 @@
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
-    width: 98%;
+    width: 100%;
 }
