--- a/src/layout.scss
+++ b/src/layout.scss
@@ -2,25 +2,25 @@
 
 .container {
     margin: 0 variables.$container_margin;
-    max-width: 60%;
 }
 
 section {
     margin: 5vh 0;
+    max-width: 60%;
 
-    .fullwidth {
-        width: 100%;
+    &.fullwidth {
+        max-width: 100%;
     }
 }
 
 @media screen and (max-width: 1600px) {
-    .container {
+    section {
         max-width: 75%;
     }
 }
 
 @media screen and (max-width: 1000px) {
-    .container {
-        max-width: 100%
+    section {
+        max-width: 100%;
     }
 }
